--- a/MicroService/StorageService/.env
+++ b/MicroService/StorageService/.env
@@ -1,4 +1,4 @@
-SECRET_KEY = SuperSecret
+SECRET_KEY = '$29h4u@q$goi15@a40d!0-az5o9)qpry#d)y$+=6=yf$ixmbap'
 ENV_STATE = dev 
 DATABASE_URL =  "postgresql://postgres:Passw0rd_2020@localhost:5432/2fast_api"
 DB_USER= postgres
