--- a/MicroService/CoreService/.env
+++ b/MicroService/CoreService/.env
@@ -2,6 +2,6 @@ SECRET_KEY = '$29h4u@q$goi15@a40d!0-az5o9)qpry#d)y$+=6=yf$ixmbap'
 ENV_STATE = dev 
 DB_USER= postgres
 DB_PASSWORD= Passw0rd_2020
-HOST=localhost
-PORT=5432
-DATABASE=2fast_api
+DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=2fast_api
